WIP add evo stone support to settings string